from datetime import date, datetime
from typing import Optional

from pydantic import BaseModel, Field


class ForecastPoint(BaseModel):
    datetime: datetime
    temperature_c: Optional[float] = None
    humidity_percent: Optional[float] = Field(default=None, ge=0, le=100)
    precipitation_probability: Optional[float] = Field(default=None, ge=0, le=100)
    precipitation_total: Optional[float] = Field(default=None, ge=0)
    precipitation_snow: Optional[float] = Field(default=None, ge=0)
    cloud_cover: Optional[float] = Field(default=None, ge=0)
    wind_speed_kmh: Optional[float] = Field(default=None, ge=0)
    apparent_temperature_c: Optional[float] = Field(default=None)


class ProviderDailyForecastPoint(BaseModel):
    date: date
    temperature_min_c: Optional[float] = None
    temperature_max_c: Optional[float] = None
    precipitation_total: Optional[float] = Field(default=None, ge=0)
    precipitation_snow: Optional[float] = Field(default=None, ge=0)
    cloud_cover: Optional[float] = Field(default=None, ge=0)


class ProviderForecast(BaseModel):
    provider: str
    latitude: float
    longitude: float
    timezone: str
    forecast: list[ForecastPoint]
    daily_forecast: list[ProviderDailyForecastPoint] = Field(default_factory=list)


class AggregatedStat(BaseModel):
    min: Optional[float] = None
    avg: Optional[float] = None
    max: Optional[float] = None


class TemperatureConsensusStat(BaseModel):
    """Descriptive provider consensus, not a calibrated probability interval."""

    consensus_low: Optional[float] = None
    central: Optional[float] = None
    consensus_high: Optional[float] = None
    provider_min: Optional[float] = None
    provider_max: Optional[float] = None
    sample_count: int = Field(default=0, ge=0)


class AggregatedHourlyForecastPoint(BaseModel):
    datetime: datetime
    provider_count: int = Field(ge=0)
    temperature_c: TemperatureConsensusStat = Field(
        default_factory=TemperatureConsensusStat
    )
    precipitation_probability: AggregatedStat = Field(default_factory=AggregatedStat)
    precipitation_total: AggregatedStat = Field(default_factory=AggregatedStat)
    precipitation_snow: AggregatedStat = Field(default_factory=AggregatedStat)
    humidity_percent: Optional[float] = None
    cloud_cover: Optional[float] = None
    wind_speed_kmh: Optional[float] = None
    apparent_temperature_c: Optional[float] = None
    condition: str


class AggregatedDailyForecastPoint(BaseModel):
    date: date
    provider_count: int = Field(ge=0)
    temperature_min_c: TemperatureConsensusStat = Field(
        default_factory=TemperatureConsensusStat
    )
    temperature_max_c: TemperatureConsensusStat = Field(
        default_factory=TemperatureConsensusStat
    )
    precipitation_total: AggregatedStat = Field(default_factory=AggregatedStat)
    condition: str


class AggregationWindow(BaseModel):
    mode: str
    start: Optional[datetime] = None
    end: Optional[datetime] = None


class DailyAggregationWindow(BaseModel):
    mode: str
    start: Optional[date] = None
    end: Optional[date] = None


class AggregatedForecast(BaseModel):
    latitude: float
    longitude: float
    timezone: str
    days: int = Field(ge=1)
    providers_requested: list[str]
    providers_used: list[str]
    provider_errors: dict[str, str] = Field(default_factory=dict)
    warnings: list[str] = Field(default_factory=list)
    hourly_window: AggregationWindow
    daily_window: DailyAggregationWindow
    hourly_forecast: list[AggregatedHourlyForecastPoint]
    daily_forecast: list[AggregatedDailyForecastPoint]
